@@ -1,3 +1,4 @@
+* Use appropriate types for email and url widgets
 * Add completion on xxx2Many and Dict
 * Add attachment preview
 * Support document widget
